# fast-api-ddd

./: .gitignore  Dockerfile  Makefile  alembic.ini  example.py  pyproject.toml
alembic/: base.py  env.py
alembic/versions/: eabe7e7f069f_create_tag_table.py
docker_compose/: app.yaml
src/: create_app.py  main.py
src/api/v1/endpoints/: handlers_explorer.py  handlers_first.py  handlers_tag.py
src/app/api/: api.py
src/apps/animal/fake/: creature.py  explorer.py
src/apps/tag/: __init__.py  depends.py  mappers.py  repository.py
src/apps/tag/domain/: __init__.py  tag_entity.py
src/apps/tag/infrastructure/: __init__.py  tag.py  tag_repository.py
src/apps/tag/service/: service.py
src/apps/tag/services/: create_tag_service.py  get_list_tags_service.py  get_tag_by_id_service.py
src/config/database/: engine.py  session.py
src/shared/depeneds/: __init__.py  tag_repository.py
src/shared/dtos/: __init__.py  tag_dto.py
src/shared/models/: tag.py
src/shared/service/: base_interactor.py  base_service.py
src_dishka/: main.py
src_dishka/api/v1/endpoints/: handlers_tag.py
src_dishka/api/v1/schemas/: tag_schemas.py
src_dishka/apps/tag/: depends.py  mappers.py  repository.py
src_dishka/apps/tag/domain/: tag_entity.py
src_dishka/apps/tag/infrastructure/: __init__.py  tag_repository.py
src_dishka/apps/tag/interactors/: create_tag_interactor.py  get_all_tags_interactor.py  get_tag_by_id_interactor.py
src_dishka/config/database/: engine.py  session.py
src_dishka/providers/: adapters.py
src_dishka/shared/dtos/: __init__.py  tag_dto.py
(+6 files in other folders)
